# dotomajee

./: .env.example  .gitignore  README.md  docker-compose.yml
.docker/images/linux_java/: Dockerfile  docker-autobash-entrypoint.sh  importdata.sh  modifname.sh
.docker/images/tomcat/: Dockerfile  docker-autobash-entrypoint.sh
config/: config.ini  config.properties
config/sgbd_data/: project.sql
project/: .gitignore  CMakeLists.txt  autobash.sh  build.xml  comp.sh
project/.webapps/config/: config.properties.example
project/nbproject/: build-impl.xml  build-impl.xml~  genfiles.properties  project.properties  project.xml
project/src/java/fr/pctronique/project/config/: FileConfig.java  MessageEmail.java  Sgbd.java
project/web/: index.jsp
